# prob

./: prob.cabal
app/: Comparison.hs  Main.hs  MultiVoi.hs
src/Control/Monad/: Prob.hs
