name:                prob
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/derrickturk/prob#readme
license:             BSD3
license-file:        LICENSE
author:              Derrick W. Turk
maintainer:          dwt@terminusdatascience.com
copyright:           2017 dwt | terminus data science, LLC
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Prob
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , random
                     , random-shuffle
  default-language:    Haskell2010

executable prob-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , prob
                     , transformers
  default-language:    Haskell2010

test-suite prob-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , prob
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/derrickturk/prob
